# ai-cover-studio

./: .gitignore  AI Cover Studio.bat  README.md  pyproject.toml  requirements.txt
config/: default.yaml  mix.yaml  svc.yaml  uvr.yaml
scripts/: build_exe.ps1  launch.py  run_cli.ps1  run_gui.ps1  run_server.ps1  setup.ps1
src/aivoice_studio/: __main__.py  app.py  cli.py  factory.py
src/aivoice_studio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aivoice_studio/core/: context.py  job_manager.py  pipeline.py  state.py
src/aivoice_studio/modules/cloud/: uploader.py
src/aivoice_studio/modules/download/: downloader.py
src/aivoice_studio/modules/mixer/: exporter.py  ffmpeg_mixer.py  vocal_effects.py
src/aivoice_studio/modules/svc/: model_manager.py  svc_runner.py
src/aivoice_studio/modules/uvr/: config.py  separator.py
src/aivoice_studio/server/: api.py  feishu.py
src/aivoice_studio/ui/: cover_fetcher.py  history_store.py  library_page.py  library_scanner.py  main_window.py  model_config_map.py  theme.py
src/aivoice_studio/ui/components/: drop_zone.py  progress_bars.py  song_card.py
src/aivoice_studio/utils/: config.py  logging.py  paths.py  process.py
tests/: test_config.py  test_pipeline_mock.py
